--- a/chapter2.tex
+++ b/chapter2.tex
@@ -236,7 +236,7 @@ So the cumulative reward is from the law of total expectation
 \end{align*}
 We have
 \begin{equation}
-\Exp_{0.01}[R_{i}]q_{*}(a_{*})0.991>\Exp_{0.1}[R_{i}]q_{*}(a_{*})0.91    
+\Exp_{0.01}[R_{i}]=q_{*}(a_{*})0.991>q_{*}(a_{*})0.91=\Exp_{0.1}[R_{i}].   
 \end{equation}
 \textbf{probability of selecting the best action}
 Write $G:=\{\text{greedy action is selected}\}$. We have for $\e=0.01$
