--- a/chapter2.tex
+++ b/chapter2.tex
@@ -149,7 +149,7 @@ the probability that the greedy action is selected?
 Write $G:=\{\text{greedy action is selected}\}$. We have
 \begin{align*}
 \Proba{\text{ G }}=&\Proba{\text{ G },random}+\Proba{\text{ G },optimal}    \\
-&=\epsilon+(1-\epsilon)\frac{1}{2}\\
+&=\epsilon\frac{1}{2}+(1-\epsilon)\\
 &=0.75.
 \end{align*}  
 \end{solution}
