--- a/chapter2.tex
+++ b/chapter2.tex
@@ -228,12 +228,12 @@ and $\Proba{exploration}=1- \Proba{A_{i}=a_{*}}$. The true value $q_{*}(a)$ each
 So the cumulative reward is from the law of total expectation
 \begin{align*}
 \Expe{R_{i}}=&\Expe{\Expe{R_{i}|A_{i}=a_{*}}}\Proba{A_{i}=a_{*}}+\Expe{\Expe{R_{i}|exploration}}\Proba{exploration}\\    
-=&q_{*}(a_{*})((1-\e)+\frac{\e}{n})+0(\e-\frac{\e}{n})\\   
-=&q_{*}(a_{*})((1-\e)+\frac{\e}{n}).
+=&\Expe{q_{*}(a_{*})}((1-\e)+\frac{\e}{n})+0(\e-\frac{\e}{n})\\   
+=&\Expe{q_{*}(a_{*})}((1-\e)+\frac{\e}{n}).
 \end{align*}
 We have
 \begin{equation}
-\Exp_{0.01}[R_{i}]=q_{*}(a_{*})0.991>q_{*}(a_{*})0.91=\Exp_{0.1}[R_{i}].   
+\Exp_{0.01}[R_{i}]=\Expe{q_{*}(a_{*})}0.991>\Expe{q_{*}(a_{*})}0.91=\Exp_{0.1}[R_{i}].   
 \end{equation}
 \textbf{probability of selecting the best action}
 Write $G:=\{\text{greedy action is selected}\}$. We have for $\e=0.01$
